--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+
+
 /* variables */
+
 :root {
     --main-color: #1a1a1a;
     --secondary-color: #2a2a2a;
 }
-
 /* general */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* header */
@@ -185,12 +189,11 @@ footer {
     background-color: var(--main-color);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    padding: 20px;
 }
 
 .creator {
-    width: 100px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -198,8 +201,8 @@ footer {
 }
 
 .creator p {
-    color: white;
-    font-size: 1.5em;
+    color: rgba(255, 255, 255, 0.568);
+    font-size: 1.1em;
 }
 
 .creator p a {
@@ -207,20 +210,53 @@ footer {
     color: white;
 }
 
+.creator p a:hover {
+    text-decoration: underline;
+}
+
 .social-medias {
     height: 100%;
+    margin-left: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .social-medias a {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     margin: 0 10px;
 }
 
 .social-medias a img {
     width: 100%;
     height: 100%;
+    filter: invert(100%);
+    transition: all .5s ease;
+}
+.social-medias a:hover {
+    opacity: .5;
+}
+
+.social-medias a:hover img {
+    transition: all .5s ease;
+    animation: shakeWithScale 0.5s infinite;
+}
+
+@keyframes shakeWithScale {
+    0% {
+        transform: scale(1) rotate(0deg);
+    }
+    25% {
+        transform: scale(1.1) rotate(5deg);
+    }
+    50% {
+        transform: scale(1) rotate(0deg);
+    }
+    75% {
+        transform: scale(1.1) rotate(-5deg);
+    }
+    100% {
+        transform: scale(1) rotate(0deg);
+    }
 }
