--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,9 @@
 
 :root {
     --main-color: #1a1a1a;
-    --secondary-color: #2a2a2a;
+    --secondary-color: #f5c518;
+    --secondary-color-text: #000;
+    --background-color: #2a2a2a;
 }
 /* general */
 * {
@@ -40,16 +42,20 @@ body {
 }
 
 .logo {
-    width: 100px;
-    height: 100%;
     display: flex;
     justify-content: center;
+    color: white;
     align-items: center;
 }
 
-.logo img {
-    width: 100%;
-    height: 100%;
+.logo h1 {
+    font-size: 2em;
+}
+
+.logo p {
+    font-size: 1.2em;
+    color: rgba(255, 255, 255, 0.568);
+    margin-left: 20px;
 }
 
 .download {
@@ -62,14 +68,17 @@ body {
 
 .download a {
     text-decoration: none;
-    color: white;
     font-size: 1.5em;
+}
+
+.download a:hover {
+    text-decoration: underline;
 }
 
 /* main */
 .main {
     width: 100%;
-    background-color: var(--secondary-color);
+    background: none;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -120,6 +129,7 @@ body {
     width: 65px;
     font-size: 2em;
     text-align: center;
+    margin-right: 10px;
 }
 
 .generator input[type="number"]::-webkit-inner-spin-button,
@@ -127,10 +137,26 @@ body {
     opacity: 1;
 }
 
-.generator input[type="text"] {
+#output {
     font-size: 2em;
     text-align: center;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--secondary-color);
+    color: var(--secondary-color-text);
+    transition: .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+#output:focus {
+    background-color: rgba(0, 0, 0, .2);
+    color: rgba(255, 255, 255, .8);
+    border: none;
+}
+
+
 
 .generator button {
     font-size: 2em;
@@ -138,6 +164,7 @@ body {
 
 #generate {
     width: 60px;
+    margin-left: 10px;
 }
 
 #generate:hover {
@@ -164,7 +191,7 @@ body {
     border: none;
     font-size: 1.5em;
     padding: 5px;
-    border: 1px solid rgba(0, 0, 0, .2);
+    border: 1px solid rgba(0, 0, 0, .0);
     width: 50px;
     height: 50px;
     border-radius: 5px;
@@ -259,4 +286,42 @@ footer {
     100% {
         transform: scale(1) rotate(0deg);
     }
+}
+
+
+.option {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
+    color: #fff;
+    width: 600px;
+}
+
+.option label {
+    font-size: 1.2em;
+    width: 50%;
+}
+
+.option input {
+    width: 70%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    padding: 5px;
+    font-size: 1.2em;
+}
+
+.option input[type="range"] {
+    width: 50%;
+}
+
+.option input[type="text"] {
+    width: 50%;
+}
+
+
+.secondary-color {
+    color: var(--secondary-color);
 }
